--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    21f1003306@ds.study.iitm.ac.in
+    <!--email_off-->21f1003306@ds.study.iitm.ac.in<!--/email_off-->
 </body>
 </html>
